--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
 }
   
-.catalog-wrapper article {
+article {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,12 +18,12 @@
   border-radius: 5px;
 }
 
-.catalog-wrapper article h2 {
+article h2 {
   text-align: center;
   margin-bottom: 10px;
 }
 
-.catalog-wrapper article a:after {
+article a:after {
   position: absolute;
   content: '';
   width: 100%;
@@ -32,7 +32,7 @@
   left: 0;
 }
 
-.catalog-wrapper article img {
+article img {
   width: 100%;
   height: 200px;
   object-fit: contain;
@@ -40,6 +40,12 @@
   margin-bottom: 10px;
 }
 
-.catalog-wrapper .price-wrapper {
+.price-wrapper {
   margin-bottom: 10px;
 }
+
+.price span {
+  margin-left: 5px;
+  font-size: 18px;
+  font-weight: bold;
+} 
