--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@ a, button {
   cursor: pointer;
   background: transparent;
   font-size: 1rem;
+  color: rebeccapurple;
 }
 
 a:focus, button:focus {
